        headers, causing Connection:Close requests to stall

      - Collector #17: Fixed broken links in StandardCacheManagers help

      - Collector #1: UNIX security fixes: make starting Zope as 'root'
        secure, stop using 'nobody', warn of insecure umasks

      - Collector #303: Properties of type 'long' got truncated 

  Zope 2.5.1 beta 1
    
    Bugs Fixed

      - Fixed failed incref in cAccessControl that caused problems when
        ghosting occured.

  Zope 2.5.0

    Bugs Fixed

      - Btree module and UnicodeSplitter could potentially 
        fail to incref Py_None on return

      - Setting proxy roles on DTMLMethods and Documents has been broken

      - Collector #99: items(), keys() and values() methods
        of IIBucket objects has been broken when called with
        min/max parameters.

      - WebDAV: The long outstanding read-only problem with WinWord
        and .html is finally solved. Zope sends now an additional ETag
        header for DTMLMethods and DTMLDocuments. Many thanks to
        Joachim Schmitz for this hint. 

      - PathIndex: fixed minor bugs, enhanced testsuite

      - DTML-MIME tag: creates now a 'Mime-Version: 1.0' to make
        some fussy email programs happy

      - utilities/requestprofiler - fixed bugs in timed mode which could
        show nonsensical results.

    Features Added

      - TextIndex/Splitters: the constructor of all three splitters
        has now three new optional parameters:

        'maxlen'=(1-256) -  to specify the maximum length of 
                            splitted words

        'singlechar'=(1|0) - allows single characters to be indexed

        'indexnumbers'=(1|0)- allows numbers to be indexed

        The default values of all parameters reflect the standard
        behaviour.

      - Enhancements to utilites/requestprofiler.py:

        Added readstats and writestats features which allow for saves and
        reuse of profile stats between runs of the requestprofiler.
